package dp_FactoryMethod.type1;

import lombok.extern.slf4j.Slf4j;

/**
 * @author archmagece
 * @since 2017-01-17 00
 */
@Slf4j
public class MQOut implements Out {
	@Override
	public String out() {
		return null;
	}
}
